yelb/03-yelb-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-db
  namespace: yelb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelb-db
      tier: backenddb
      secgroup: yelb-db
  template:
    metadata:
      labels:
        app: yelb-db
        tier: backenddb
        secgroup: yelb-db
    spec:
      containers:
      - name: yelb-db
        image: mreferre/yelb-db:0.5
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-db
  labels:
    app: yelb-db
    tier: backenddb
    secgroup: yelb-db
  namespace: yelb
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: yelb-db
    tier: backenddb
