yelb/05a-yelb-ui-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
  namespace: yelb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yelb-ui
      tier: frontend
      secgroup: web
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
        secgroup: web
    spec:
      containers:
      - name: yelb-ui
        image: mreferre/yelb-ui:0.7
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  labels:
    app: yelb-ui
    tier: frontend
    secgroup: web
  namespace: yelb
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: yelb-ui
    tier: frontend
