yelb/05b-yelb-ui-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
  namespace: yelb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yelb-ui
      tier: frontend
      secgroup: web
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
        secgroup: yelb-web
    spec:
      containers:
      - name: yelb-ui
        image: mreferre/yelb-ui:0.7
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  namespace: yelb
  labels:
    app: yelb-ui
    tier: frontend
    secgroup: yelb-web
  namespace: yelb
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: yelb-ui
    tier: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelb-ui-ingress
  namespace: yelb
spec:
  rules:
    - host: yelb.rtbsystems.com
      http:
        paths:
        - backend:
            service:
              name:  yelb-ui
              port:
                number: 80
          path: /
          pathType: Prefix
