yelb/06-network-policy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: yelb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
