yelb/07-network-policy-yelb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: yelb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-web-allow
  namespace: yelb
spec:
  podSelector:
    matchLabels:
      app: yelb-ui
  policyTypes:
  - Ingress
  ingress:
    - from:
      ports:
      - protocol: TCP
        port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-ui-to-app
  namespace: yelb
spec:
  podSelector:
    matchLabels:
      app: yelb-appserver
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: yelb-ui
      ports:
      - protocol: TCP
        port: 4567
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-app-to-db
  namespace: yelb
spec:
  podSelector:
    matchLabels:
      app: yelb-db
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: yelb-appserver
      ports:
      - protocol: TCP
        port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: yelb-app-to-redis
  namespace: yelb
spec:
  podSelector:
    matchLabels:
      app: redis-server
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: yelb-appserver
      ports:
      - protocol: TCP
        port: 6379
